# EKT-HMLTC-classification

./: .gitignore  README.md  environment-split.yml  pyproject.toml
data/: EKTSubjects_new.xml
src/ekt_hmltc/: __main__.py
src/ekt_hmltc/preprocessing/: filter_annotations.py  taxonomy.py
src/ekt_hmltc/stratification/: adaptive_priority_split.py  human_annotations_split.py
src/ekt_hmltc_classification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
