[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ekt-hmltc-classification"
version = "0.1.0"
description = "Hierarchical multi-label text classification utilities for EKT scientific-resource annotations."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
